--- a/bootstrap-vite/src/index.html
+++ b/bootstrap-vite/src/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap w/ Parcel</title>
+  <title>Bootstrap w/ Vite</title>
   <link rel="stylesheet" href="scss/styles.scss">
-  <script type="module" src="js/main.js"></script>
+  <script type="module" src="./js/main.js"></script>
 </head>
 
-<body>
-
+<body class="m-3">
+  <button type="button" class="btn btn-primary">Primary</button>
 </body>
 
 </html>
