fix: tailwind starter template

--- a/tailwind-starter/index.html
+++ b/tailwind-starter/index.html
@@ -7,7 +7,7 @@
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
 
-<body class="dark">
+<body class="light">
 
   <div class="mx-auto flex max-w-sm items-center gap-x-4 rounded-xl bg-white p-6 shadow-lg outline outline-black/5">
     <div>
